--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,36 @@
 .container
 {
-    margin:5rem;
     
-}
-
-.inputField
-{
-    display:block;
-    margin: 1rem;
-}
-
-
-body{
+    margin:auto;
+    width:50%;
+    height:100%;
+    padding: 2rem;
     background-color:#1e293b;
     color: #e2e8f0;
 }
-#submit-btn{
-    margin-left: 1rem;
-}    
-
+input,label{
+    display: block;
+}
+input{
+    width: 90%;
+    padding: 0.5rem;
+    /* height: 10px; */
+    display: block;
+    margin: auto;
+}
+label{
+    padding-top: 0.5rem;
+    text-align: center;
+    font-weight: bold;
+}
+button {
+    padding: 0.5rem 1rem;
+    display: block;
+    margin: auto;
+    margin-top: 1rem;
+}
 #output{
-    margin:2rem;
+    margin: left 1.2em;
+    padding: 1.5rem;
+    font-size: 20px;
 }
